[gd_scene load_steps=20 format=2]

[ext_resource path="res://UI/main_menu.gd" type="Script" id=1]
[ext_resource path="res://images/MiniGameJam - Colors/Title screen/aboutbutton.png" type="Texture" id=2]
[ext_resource path="res://images/MiniGameJam - Colors/Title screen/titlelayer1.png" type="Texture" id=3]
[ext_resource path="res://fonts/SHOWG.TTF" type="DynamicFontData" id=4]
[ext_resource path="res://images/MiniGameJam - Colors/Title screen/playbutton.png" type="Texture" id=5]
[ext_resource path="res://UI/Play.gd" type="Script" id=6]
[ext_resource path="res://sound_effects/confirm.ogg" type="AudioStream" id=7]
[ext_resource path="res://images/MiniGameJam - Colors/Title screen/wheel.png" type="Texture" id=8]
[ext_resource path="res://images/MiniGameJam - Colors/Title screen/wheel-center.png" type="Texture" id=9]

[sub_resource type="DynamicFont" id=1]
size = 60
font_data = ExtResource( 4 )

[sub_resource type="Animation" id=12]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=11]
resource_name = "spin"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}

[sub_resource type="StyleBoxFlat" id=2]

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.423529, 0.423529, 0.423529, 1 )

[sub_resource type="Theme" id=4]
Button/colors/font_color = Color( 1, 1, 1, 1 )
Button/colors/font_color_disabled = Color( 0.9, 0.9, 0.9, 0.2 )
Button/colors/font_color_hover = Color( 1, 1, 1, 1 )
Button/colors/font_color_pressed = Color( 1, 1, 1, 1 )
Button/constants/hseparation = 2
Button/fonts/font = null
Button/styles/disabled = null
Button/styles/focus = null
Button/styles/hover = SubResource( 2 )
Button/styles/normal = SubResource( 3 )
Button/styles/pressed = null

[sub_resource type="Animation" id=7]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 303.618, 148.951 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rect_scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.356126, 0.356126 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "hover"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 464.992, 191.454 ), Vector2( 469.235, 164.121 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rect_scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.554288, 0.554288 ), Vector2( 0.577328, 0.577328 ) ]
}

[sub_resource type="Animation" id=9]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 457.78, 494.375 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rect_scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.5638, 0.5638 ) ]
}

[sub_resource type="Animation" id=10]
resource_name = "hover"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.5638, 0.5638 ), Vector2( 0.597467, 0.597467 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 476.165, 479.282 ), Vector2( 465.738, 465.054 ) ]
}

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 3 )
expand = true
stretch_mode = 6

[node name="VBoxContainer" type="VBoxContainer" parent="Background"]
margin_left = 50.0
margin_top = 50.0
margin_right = 780.0
margin_bottom = 670.0

[node name="Title" type="RichTextLabel" parent="Background"]
margin_left = 1060.81
margin_top = 22.773
margin_right = 1790.8
margin_bottom = 122.773
rect_min_size = Vector2( 0, 100 )
rect_rotation = 48.3523
custom_fonts/normal_font = SubResource( 1 )
text = "Elf Games Roulette"

[node name="Wheel" type="TextureRect" parent="Background"]
margin_left = -977.093
margin_top = -655.533
margin_right = 1890.91
margin_bottom = 2211.47
rect_scale = Vector2( 0.55, 0.55 )
rect_pivot_offset = Vector2( 1434, 1433 )
texture = ExtResource( 8 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Background/Wheel"]
playback_speed = 0.1
anims/RESET = SubResource( 12 )
anims/spin = SubResource( 11 )

[node name="Play" type="TextureButton" parent="Background"]
margin_left = 303.618
margin_top = 148.951
margin_right = 1703.62
margin_bottom = 1198.95
rect_scale = Vector2( 0.356126, 0.356126 )
focus_neighbour_bottom = NodePath("../About")
theme = SubResource( 4 )
texture_normal = ExtResource( 5 )
expand = true
script = ExtResource( 6 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Background/Play"]
anims/RESET = SubResource( 7 )
anims/hover = SubResource( 8 )

[node name="About" type="TextureButton" parent="Background"]
margin_left = 457.78
margin_top = 494.375
margin_right = 1927.78
margin_bottom = 1094.38
rect_scale = Vector2( 0.5638, 0.5638 )
focus_neighbour_top = NodePath("../Play")
theme = SubResource( 4 )
texture_normal = ExtResource( 2 )
expand = true
script = ExtResource( 6 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Background/About"]
anims/RESET = SubResource( 9 )
anims/hover = SubResource( 10 )

[node name="TextureRect" type="TextureRect" parent="Background"]
margin_left = 391.942
margin_top = 711.051
margin_right = 616.942
margin_bottom = 939.051
rect_scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 9 )

[node name="ColorRect" type="ColorRect" parent="Background"]
margin_left = -93.0
margin_right = 218.0
margin_bottom = 1538.0
color = Color( 0, 0, 0, 1 )

[node name="ButtonClick" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[connection signal="button_up" from="Background/Play" to="." method="_on_Play_button_up"]
[connection signal="focus_entered" from="Background/Play" to="Background/Play" method="_on_Play_focus_entered"]
[connection signal="focus_exited" from="Background/Play" to="Background/Play" method="_on_Play_focus_exited"]
[connection signal="mouse_entered" from="Background/Play" to="Background/Play" method="_on_Play_mouse_entered"]
[connection signal="mouse_exited" from="Background/Play" to="Background/Play" method="_on_Play_mouse_exited"]
[connection signal="focus_entered" from="Background/About" to="Background/About" method="_on_About_focus_entered"]
[connection signal="focus_exited" from="Background/About" to="Background/About" method="_on_About_focus_exited"]
[connection signal="mouse_entered" from="Background/About" to="Background/About" method="_on_About_mouse_entered"]
[connection signal="mouse_exited" from="Background/About" to="Background/About" method="_on_About_mouse_exited"]
[connection signal="pressed" from="Background/About" to="." method="_on_About_pressed"]
